<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_primary"
    android:clickable="true"
    android:focusable="true"
    android:padding="24dp"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".ui.details.FeedbackDetailsFragment">


    <ImageButton
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_secondary" />

    <ImageView
        android:id="@+id/img_feedback_logo"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/issue"
        android:src="@drawable/bug"
        app:layout_constraintBottom_toBottomOf="@id/txt_feedback_title"
        app:layout_constraintEnd_toStartOf="@id/txt_feedback_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_feedback_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/issue"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_feedback_detail"
            style="@style/TextAreaFeedbackLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedHintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_feedback_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_feedback_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                android:fontFamily="@font/inter_regular"
                android:gravity="top"
                android:inputType="textCapSentences|textImeMultiLine|textMultiLine"
                android:lineHeight="20dp"
                android:lineSpacingExtra="3sp"
                android:lines="10"
                android:maxLines="10"
                android:scrollbarThumbVertical="@color/stroke"
                android:scrollbars="vertical"
                android:textColor="@color/text_primary"
                android:textSize="14sp"
                android:textCursorDrawable="@null"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                tools:targetApi="p"
                tools:text="@tools:sample/lorem/random" />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_feedback"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:background="@color/surface_secondary"
        android:padding="4dp"
        android:scaleType="center"
        android:src="@drawable/ic_camera_outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_feedback_detail"
        app:shapeAppearanceOverlay="@style/ImageCustomStyle"
        app:strokeColor="@color/stroke"
        app:strokeWidth="1dp" />

    <ImageView
        android:id="@+id/img_remove_screnshot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:scaleType="center"
        android:src="@drawable/ic_trash"
        android:contentDescription="@string/remove_screenshot"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/img_feedback"
        app:layout_constraintEnd_toEndOf="@id/img_feedback" />

    <Button
        android:id="@+id/btn_send_feedback"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_send_feedback_button"
        android:fontFamily="@font/inter_regular"
        android:text="@string/send_feedback"
        android:textAllCaps="false"
        android:textColor="@color/text_primary"
        android:textSize="16sp"
        app:backgroundTint="@null"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".7"
        app:layout_constraintStart_toEndOf="@id/img_feedback"
        app:layout_constraintTop_toTopOf="@id/img_feedback" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/copyright"
        android:textColor="@color/text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_send_feedback" />


</androidx.constraintlayout.widget.ConstraintLayout>